[project]
name = "feedgrab"
version = "0.2.0"
description = "Universal content reader — fetch, normalize, and digest content from 7+ platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leo", email = "runes.leo@gmail.com"}
]
keywords = ["content-reader", "rss", "telegram", "bilibili", "xiaohongshu", "digest"]
dependencies = [
    "requests>=2.28",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/iBigQiang/feedgrab"
Repository = "https://github.com/iBigQiang/feedgrab"
Issues = "https://github.com/iBigQiang/feedgrab/issues"

[project.optional-dependencies]
telegram = ["telethon>=1.34"]
mcp = ["mcp[cli]>=1.0"]
browser = ["playwright>=1.40"]
stealth = ["patchright>=1.0", "browserforge>=1.1", "curl_cffi>=0.7"]
wechat = ["markdownify>=0.13", "beautifulsoup4>=4.12"]
all = ["telethon>=1.34", "mcp[cli]>=1.0", "playwright>=1.40", "patchright>=1.0", "browserforge>=1.1", "curl_cffi>=0.7", "markdownify>=0.13", "beautifulsoup4>=4.12"]

[project.scripts]
feedgrab = "feedgrab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feedgrab"]
